fix horizonal overflow prob.

--- a/css/styles.less
+++ b/css/styles.less
@@ -61,8 +61,9 @@ label, button, input, .button {
 	cursor:pointer;
 }
 #siteWrap {
-	height:100%;
+	// height:100%;
 	position:relative;
+	overflow: hidden;
 }
 .hide { display:none !important; }
 
@@ -226,19 +227,25 @@ footer {
 	SETTINGS
 */
 .settings {
-	width:300px;// height: 100%;
-	margin:0; padding: 1em;
+	width: 0; // height: 100%;
+	margin:0; padding: 0;
 	color:white;
 	text-shadow: 1px 1px 1px rgba(0,0,0,.5);
 	background-color:#808080;
-	position:absolute; top:0; bottom: 0; right:-300px; z-index: @z-top;
+	position:absolute; top:0; bottom: 0; right:0; z-index: @z-top;
 	//-webkit-transition: position 2s ease;
-	transition: margin 1s ease;
+	transition: width .5s ease-out;
 
 	&.open {
 		//right:0px;
-		margin-right:300px;
+		// margin-right:300px;
+		width: 300px;
 		box-shadow: 0 0 20px rgba(0,0,0,.6);
+	}
+	
+	&-container {
+		width: 300px;
+		padding: 1em;
 	}
 
 	.settings-menu-toggle {
